--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -6,7 +6,7 @@
                     <h1>{{convention.programme.nom}}</h1>
                 </div>
                 <div class="fr-grid-row fr-pl-9w">
-                    <div class="fr-py-1w conv_statut_{{convention.statut_for_template.key_statut}}">
+                    <div class="fr-py-1w apilos-colored_status apilos-colored_status--{{convention.statut_for_template.key_statut}}">
                         <span class="fr-px-1w fr-h3">
                             {{convention.statut_for_template.short_statut}}
                         </span><br>
