--- a/templates/common/display_text_and_files_if_exists.html
+++ b/templates/common/display_text_and_files_if_exists.html
@@ -1,13 +1,15 @@
-{% if file_list or text %}
-    {% if object_field %}
+{% load custom_filters %}
+
+{% if object_field %}
+    {% if file_list or text or comments|has_comments:object_field %}
         <div class="block--row-strech" id="{{object_field}}_group">
             <div class="block--row-strech-1">
                 <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{% if text %}{{ text|linebreaks }}{% endif %}</p>
             </div>
             {% include "common/utils/comments_field.html" %}
         </div>
-    {% else %}
-        <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{% if text %}{{ text|linebreaks }}{% endif %}</p>
     {% endif %}
+{% elif file_list or text %}
+    <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{% if text %}{{ text|linebreaks }}{% endif %}</p>
 {% endif %}
 {% include "common/display_files.html" with file_list=file_list %}
