space before search bouton

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="fr-col-12 fr-grid-row fr-grid-row--right">
-                    <button class="fr-btn fr-fi-search-line fr-btn--icon-left" title="Rechercher" id="search_btn">
+                    <button class="fr-btn fr-fi-search-line fr-btn--icon-left fr-mt-1w" title="Rechercher" id="search_btn">
                         Rechercher dans les conventions existantes
                     </button>
                 </div>
