--- a/templates/common/display_field_if_exists.html
+++ b/templates/common/display_field_if_exists.html
@@ -6,7 +6,7 @@
             <div class="block--row-strech-1">
                 <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{{ value|default_if_none:'-'|inline_text_multiline }}</p>
             </div>
-            {% include "common/utils/comments_field.html" %}
+            {% include "common/utils/comments_field.html" with callback_click="refresh_opened_comments" %}
         </div>
     {% endif %}
 {% elif value %}
