--- a/templates/common/display_text_and_files_if_exists.html
+++ b/templates/common/display_text_and_files_if_exists.html
@@ -6,7 +6,7 @@
             <div class="block--row-strech-1">
                 <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{% if text %}{{ text|linebreaks }}{% endif %}</p>
             </div>
-            {% include "common/utils/comments_field.html" %}
+            {% include "common/utils/comments_field.html" with callback_click="refresh_opened_comments" %}
         </div>
     {% endif %}
 {% elif file_list or text %}
