--- a/templates/common/utils/comments_field.html
+++ b/templates/common/utils/comments_field.html
@@ -12,6 +12,7 @@
             object_uuid : object_uuid,
             dialog_title : "{% if form_input.label %}{{form_input.label|safe}}{% elif label %}{{ label }}{% else %}Commentaires{% endif %}",
             empty_toggle_on : "{% if form_input.label %}{{form_input.id_for_label}}{% else %}{{ object_field }}{% endif %}_group",
+            {% if callback_click %}callback_click: "{{ callback_click }}", {% endif %}
             loading_img : '{% static "icons/loading.gif" %}'
         })
     </script>
