--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -6,6 +6,7 @@
 
 {% block javascript_extras %}
     <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
+    <script src="{% static "js/turbo.es2017-umd.js" %}" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
 
 
@@ -27,6 +28,8 @@
                             </div>
                         {% endif %}
 
+                        <turbo-frame id="opened_comments_block" src="{% url 'comments:opened_comments' convention_uuid=convention.uuid %}">
+                        </turbo-frame>
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-lg-6">
@@ -162,7 +165,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col">Section {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col">Numéro {% include "common/form/required_field_star.html" %}</th>
@@ -177,7 +180,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Référence cadastrale" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Référence cadastrale" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -230,7 +233,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='logement_edd' label="Logements de l'EDD" %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='logement_edd' label="Logements de l'EDD" callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col">Financement {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col">Désignation {% include "common/form/required_field_star.html" %}</th>
@@ -244,7 +247,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement de l'EDD" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement de l'EDD" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -288,7 +291,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements'%}
+                                                            {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements' callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col">Numéro</th>
                                                         <th scope="col">Date d'octroi</th>
@@ -305,7 +308,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Prêt ou financement" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Prêt ou financement" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -359,7 +362,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='logement' label='Logements' %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='logement' label='Logements' callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Désignation {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Type {% include "common/form/required_field_star.html" %}</th>
@@ -379,7 +382,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -459,7 +462,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='annexe' label="Annexes" %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='annexe' label="Annexes" callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Type d'annexe {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--200">Désignation des logements {% include "common/form/required_field_star.html" %}</th>
@@ -476,7 +479,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Annexe" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Annexe" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -550,7 +553,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Type de stationnement {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--200">Nombre de stationnements {% include "common/form/required_field_star.html" %}</th>
@@ -564,7 +567,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
