--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -6,6 +6,10 @@
 
 {% block javascript_extras %}
     <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
+    <script src="{% static "js/turbo.es2017-umd.js" %}" nonce="{{request.csp_nonce}}"></script>
+    <script nonce="{{request.csp_nonce}}">
+        Turbo.session.drive = false
+    </script>
 {% endblock %}
 
 
@@ -18,15 +22,17 @@
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12 fr-mb-5w">
-                        {% if not convention.is_submitted %}
-                            <div role="alert" class="fr-alert fr-alert--error fr-mb-3w">
-                                <p class="fr-alert__title">Attention</p>
+                        {% if convention.is_project %}
+                            <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
                                 <p>le document de convention n'est pas encore soumis à l'instruction{% if user.is_bailleur %},
                                     pour finaliser votre demande de conventionnement, vous devez clicker sur le bouton
-                                    <b>"Soumettre au service instructeur"</b>{% endif %}</p>
+                                    <b>"Soumettre au service instructeur"</b> en bas de page{% endif %}</p>
                             </div>
                         {% endif %}
 
+                        <turbo-frame id="opened_comments_block" data-turbo="true">
+                            {% include "comments/opened_comments.html" %}
+                        </turbo-frame>
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-lg-6">
@@ -162,7 +168,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col">Section {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col">Numéro {% include "common/form/required_field_star.html" %}</th>
@@ -177,7 +183,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Référence cadastrale" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Référence cadastrale" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -230,7 +236,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='logement_edd' label="Logements de l'EDD" %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='logement_edd' label="Logements de l'EDD" callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col">Financement {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col">Désignation {% include "common/form/required_field_star.html" %}</th>
@@ -244,7 +250,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement de l'EDD" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement de l'EDD" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -288,7 +294,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements'%}
+                                                            {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements' callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col">Numéro</th>
                                                         <th scope="col">Date d'octroi</th>
@@ -305,7 +311,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Prêt ou financement" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Prêt ou financement" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -359,7 +365,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='logement' label='Logements' %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='logement' label='Logements' callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Désignation {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Type {% include "common/form/required_field_star.html" %}</th>
@@ -379,7 +385,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -459,7 +465,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='annexe' label="Annexes" %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='annexe' label="Annexes" callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Type d'annexe {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--200">Désignation des logements {% include "common/form/required_field_star.html" %}</th>
@@ -476,7 +482,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Annexe" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Annexe" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
@@ -550,7 +556,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != '1. Projet' %}
-                                                            {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" %}
+                                                            {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" callback_click="refresh_opened_comments" %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Type de stationnement {% include "common/form/required_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--200">Nombre de stationnements {% include "common/form/required_field_star.html" %}</th>
@@ -564,7 +570,7 @@
                                                                 <tr id="{{main_object_field}}_group">
                                                                     {% if convention.statut != '1. Projet' %}
                                                                         <td id="{{main_object_field}}_div">
-                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" %}
+                                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" callback_click="refresh_opened_comments" %}
                                                                         </td>
                                                                     {% endif %}
                                                                     <td>
