--- a/templates/conventions/instructeur_validation.html
+++ b/templates/conventions/instructeur_validation.html
@@ -1,7 +1,7 @@
 {% if request.session.is_instructeur and convention.statut != '1. Projet' %}
     <div class="fr-col-md-12  fr-py-5w">
-        <div role="alert" class="fr-alert fr-alert--error">
-            {% if convention.is_instruction_ongoing %}
+        {% if convention.is_instruction_ongoing %}
+            <div role="alert" class="fr-alert fr-alert--warning">
                 <p class="fr-mb-3w">Une fois la convention générée, si celle-ci correspond aux attendus, vous pouvez l'envoyer au bailleur par email et cliquer sur la bouton ci-dessous.
                     Cela nous permet de suivre le statut de la convention en temps réel.</p>
                 <div>
@@ -37,7 +37,10 @@
                         </script>
                     </form>
                 </div>
-            {% elif convention.is_validated %}
+            </div>
+        {% elif convention.is_validated %}
+            <div role="alert" class="fr-alert fr-alert--success">
+
                 <p class="fr-alert__title">La convention a été validée le {{ convention.valide_le|date:"j F Y" }}</p>
                 <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
 
@@ -59,9 +62,9 @@
                         </script>
                     </form>
                 </div>
-            {% endif %}
-            <p class="fr-my-3w"><b>Bientôt</b>, nous serons en mesure de prendre en charge la suite du processus de conventionnement sur la plateforme APiLos</p>
-        </div>
+        {% endif %}
+        <p class="fr-my-3w"><b>Bientôt</b>, nous serons en mesure de prendre en charge la suite du processus de conventionnement sur la plateforme APiLos</p>
+    </div>
     </div>
 {% endif %}
 
