Add 2 fields to manage options in HLM and SEM convention

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -528,3 +528,11 @@ table.fullwidth {
 /*
  * End display convention status
  */
+
+
+.apilos-input-group--inline {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
