--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -1,43 +1,52 @@
-{% if convention.statut == '1. Projet' %}
-    <button type="button" class="fr-btn apilos-btn--red fr-btn--icon-left fr-fi-delete-line" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}">
-        Supprimer cette convention
-    </button>
-    <dialog aria-labelledby="fr-modal-{{convention.uuid}}-title" id="fr-modal-{{convention.uuid}}" class="fr-modal" role="dialog" >
-        <div class="fr-container fr-container--fluid fr-container-md">
-            <div class="fr-grid-row fr-grid-row--center">
-                <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
-                    <div class="fr-modal__body">
-                        <div class="fr-modal__header">
-                            <button class="fr-link--close fr-link" aria-controls="fr-modal-{{convention.uuid}}">Fermer</button>
-                        </div>
-                        <div class="fr-modal__content">
-                            <h1 id="fr-modal-{{convention.uuid}}-title" class="fr-modal__title">
-                                <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                                {{ convention }}
-                            </h1>
-                            <p>Vous vous apprétez à supprimer la convention "{{convention}}", êtes-vous sur de vouloir supprimer cette convention ?</p>
-                        </div>
-                        <div class="fr-modal__footer">
-                            <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
-                                <li>
-                                    <button type="button" class="fr-btn fr-btn--icon-left fr-fi-alert-line" id='delete_{{convention.uuid}}'>
-                                        Supprimer la convention
-                                    </button>
-                                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                        document.addEventListener('DOMContentLoaded', function () {
-                                            document.getElementById('delete_{{convention.uuid}}')
-                                                .addEventListener('click', function(){ location.href="{% url 'conventions:delete' convention_uuid=convention.uuid %}" });
-                                        });
-                                    </script>
-                                </li>
-                                <li>
-                                    <button type="button" class="fr-btn fr-btn--secondary" aria-controls="fr-modal-{{convention.uuid}}">Annuler</button>
-                                </li>
-                            </ul>
-                        </div>
+<div class="fr-col-12 fr-col-lg-6">
+    <div role="alert" class="fr-alert fr-alert--warning">
+        <p class="fr-alert__title">
+            Suppression du projet de convention
+        </p>
+        <p>
+            Vous vous êtes trompé lors de la création ? Ce n'est pas la bonne opération ?
+            Vous pouvez supprimer le projet de convention, cela ne supprimera pas l'opération et vous pourrez la refaire plus tard.
+        </p>
+        <button type="button" class="fr-btn apilos-btn--red fr-btn--icon-left fr-fi-delete-line  fr-my-1w" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}">
+            Supprimer cette convention
+        </button>
+    </div>
+</div>
+<dialog aria-labelledby="fr-modal-{{convention.uuid}}-title" id="fr-modal-{{convention.uuid}}" class="fr-modal" role="dialog" >
+    <div class="fr-container fr-container--fluid fr-container-md">
+        <div class="fr-grid-row fr-grid-row--center">
+            <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
+                <div class="fr-modal__body">
+                    <div class="fr-modal__header">
+                        <button class="fr-link--close fr-link" aria-controls="fr-modal-{{convention.uuid}}">Fermer</button>
+                    </div>
+                    <div class="fr-modal__content">
+                        <h1 id="fr-modal-{{convention.uuid}}-title" class="fr-modal__title">
+                            <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
+                            {{ convention }}
+                        </h1>
+                        <p>Vous vous apprétez à supprimer la convention "{{convention}}", êtes-vous sur de vouloir supprimer cette convention ?</p>
+                    </div>
+                    <div class="fr-modal__footer">
+                        <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
+                            <li>
+                                <button type="button" class="fr-btn fr-btn--icon-left fr-fi-alert-line" id='delete_{{convention.uuid}}'>
+                                    Supprimer la convention
+                                </button>
+                                <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                    document.addEventListener('DOMContentLoaded', function () {
+                                        document.getElementById('delete_{{convention.uuid}}')
+                                            .addEventListener('click', function(){ location.href="{% url 'conventions:delete' convention_uuid=convention.uuid %}" });
+                                    });
+                                </script>
+                            </li>
+                            <li>
+                                <button type="button" class="fr-btn fr-btn--secondary" aria-controls="fr-modal-{{convention.uuid}}">Annuler</button>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-    </dialog>
-{% endif %}
+    </div>
+</dialog>
