--- a/templates/conventions/actions/generate_convention.html
+++ b/templates/conventions/actions/generate_convention.html
@@ -14,7 +14,7 @@
             <p>
                 Le document de convention sera généré en format docx et téléchargé automatiquement. Pour plus d'information, n'hésitez pas à consulter l'<a class="fr-link" href="https://docs.apilos.beta.gouv.fr/utiliser-la-plateforme/comment-signer-une-convention#generer-la-convention-au-format-word-ou-openoffice" target="_blank">aide en ligne</a>
             </p>
-            <form method="post" action="{% url 'conventions:generate' convention_uuid=convention.uuid %}">
+            <form method="post" action="{% url 'conventions:generate' convention_uuid=convention.uuid %}" data-turbo="false">
                 {% csrf_token %}
                 <button class="fr-btn fr-my-1w">
                     Générer la convention
