Add type 1 and 2 selection and options of type 2 for first article

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -536,3 +536,7 @@ table.fullwidth {
   align-items: center;
   justify-content: space-between;
 }
+
+.apilos-form-label--strike {
+  text-decoration: line-through;
+}
