--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -59,7 +59,7 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-my-5w">
                         {% if request.session.is_bailleur %}
-                            <h1>Benvenue sur APiLos !</h1>
+                            <h1>Bienvenue sur APiLos !</h1>
                             <p class="apilos-subtitle">Vous travaillez pour un bailleur de logements sociaux et souhaitez créer votre première convention APL.</p>
                             <p class="apilos-subtitle">Nous vous accompagnons tout au long de la procédure !</p>
                         {% elif request.session.is_instructeur or request.user.is_superuser %}
