--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -21,6 +21,7 @@
                     <div class="fr-col-12 fr-col-md-12">
 
                         <h4>Entreprise bailleur</h4>
+                        {% include "common/editable_fields_info.html" %}
 
                         {% include "common/form/input_text.html" with form_input=form.nom object_field="bailleur__nom__"|add:form.uuid.value %}
 
