remove selection step in progressbar and propose a differente way to display Bailleur in récapitulatif

--- a/templates/common/form/conventionform_header.html
+++ b/templates/common/form/conventionform_header.html
@@ -7,7 +7,6 @@
         </div>
     {% endif %}
     <div class="fr-col-12">
-        {% include "common/step_progressbar.html" with convention=convention convention_form_step=convention_form_step %}
+        {% include "common/step_progressbar.html" with convention=convention %}
     </div>
-    <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Identité du signataire</h2> -->
 </div>
