--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -11,13 +11,12 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner fr-pb-1w">
         {% include "conventions/common/form_header.html" with convention=convention %}
-        {% include "common/step_progressbar.html" with convention=convention convention_form_step=convention_form_step %}
+        {% include "common/step_progressbar.html" with convention=convention %}
         <div class="fr-container">
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12">
-                        <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Détails des logements</h2> -->
 
                         <h4>Logements associés à la convention</h4>
 
