--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -18,7 +18,7 @@
     {% with programme_uuid=programme.uuid|slugify convention_uuid=convention.uuid|slugify lot_uuid=lot.uuid|slugify %}
         <div class="fr-container-fluid ds_banner">
             {% include "conventions/common/form_header.html" with convention=convention %}
-            {% include "common/step_progressbar.html" with convention=convention convention_form_step=convention_form_step %}
+            {% include "common/step_progressbar.html" with convention=convention %}
             <div class="fr-container">
                 {% csrf_token %}
                 {% if convention.is_project %}
@@ -38,57 +38,101 @@
                 </turbo-frame>
 
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-12 fr-col-lg-6">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
-                                <div class="block--row-strech" id="{{object_field}}_div">
-                                    <div class="block--row-strech-1">
-                                        <h4 class="fr-card__title">
-                                            Convention
-                                        </h4>
+                    {% if False %}
+                        <div class="fr-col-12 fr-col-lg-6">
+                            <div class="fr-card fr-card--no-arrow">
+                                <div class="fr-card__body">
+                                    <h4 class="fr-card__title">
+                                        Convention
+                                    </h4>
+                                    <div class="table--limited-height">
+                                        {% include "common/display_field_if_exists.html" with label="Nom de l'opération" value=programme.nom %}
+                                        {% include "common/display_field_if_exists.html" with label="Financement" value=lot.financement %}
+                                        {% include "common/display_field_if_exists.html" with label="Ville" value=programme.ville %}
+                                        {% include "common/display_field_if_exists.html" with label="Nombre de logements à conventionner" value=lot.nb_logements %}
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:selection_update' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
-                                </div>
-                                <div class="table--limited-height">
-                                    {% include "common/display_field_if_exists.html" with label="Nom de l'opération" value=programme.nom %}
-                                    {% include "common/display_field_if_exists.html" with label="Financement" value=lot.financement %}
-                                    {% include "common/display_field_if_exists.html" with label="Ville" value=programme.ville %}
-                                    {% include "common/display_field_if_exists.html" with label="Nombre de logements à conventionner" value=lot.nb_logements %}
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="fr-col-12 fr-col-lg-6">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
-                                <div class="block--row-strech" id="{{object_field}}_div">
-                                    <div class="block--row-strech-1">
-                                        <h4 class="fr-card__title">
-                                            Bailleur
-                                        </h4>
+                        <div class="fr-col-12 fr-col-lg-6">
+                            <div class="fr-card fr-card--no-arrow">
+                                <div class="fr-card__body">
+                                    <div class="block--row-strech" id="{{object_field}}_div">
+                                        <div class="block--row-strech-1">
+                                            <h4 class="fr-card__title">
+                                                Bailleur
+                                            </h4>
+                                        </div>
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    <div class="table--limited-height">
+                                        {% with bailleur_uuid=bailleur.uuid|slugify %}
+                                            {% include "common/display_field_if_exists.html" with label="Nom" value=bailleur.nom object_field="bailleur__nom__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="SIRET" value=bailleur.siret object_field="bailleur__siret__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Capital social" value=bailleur.capital_social object_field="bailleur__capital_social__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Adresse" value=bailleur.adresse object_field="bailleur__adresse__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Code postal" value=bailleur.code_postal object_field="bailleur__code_postal__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Ville" value=bailleur.ville object_field="bailleur__ville__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Nom du signataire de la convention" value=bailleur.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Fonction du signataire de la convention" value=bailleur.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Date de délibération" value=bailleur.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
+                                        {% endwith %}
+                                    </div>
                                 </div>
-                                <div class="table--limited-height">
+                            </div>
+                        </div>
+                    {% else %}
+                        <div class="fr-col-12">
+                            <div class="fr-card fr-card--no-arrow">
+                                <div class="fr-card__body">
+                                    <div class="block--row-strech" id="{{object_field}}_div">
+                                        <div class="block--row-strech-1">
+                                            <h4 class="fr-card__title">
+                                                Bailleur
+                                            </h4>
+                                        </div>
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    </div>
                                     {% with bailleur_uuid=bailleur.uuid|slugify %}
-                                        {% include "common/display_field_if_exists.html" with label="Nom" value=bailleur.nom object_field="bailleur__nom__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="SIRET" value=bailleur.siret object_field="bailleur__siret__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Capital social" value=bailleur.capital_social object_field="bailleur__capital_social__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Adresse" value=bailleur.adresse object_field="bailleur__adresse__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Code postal" value=bailleur.code_postal object_field="bailleur__code_postal__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Ville" value=bailleur.ville object_field="bailleur__ville__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Nom du signataire de la convention" value=bailleur.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Fonction du signataire de la convention" value=bailleur.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Date de délibération" value=bailleur.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
+                                        <div class="fr-grid-row fr-grid-row--gutters">
+                                            <div class="fr-col-12 fr-col-lg-6">
+                                                <div class="fr-mb-2w">
+                                                    <b>{% include "common/display_field_if_exists.html" with value=bailleur.nom object_field="bailleur__nom__"|add:bailleur_uuid %}</b>
+                                                    <div class="fr-ml-3w">
+                                                        {% include "common/display_field_if_exists.html" with value=bailleur.adresse object_field="bailleur__adresse__"|add:bailleur_uuid %}
+                                                        <div class="fr-grid-row fr-grid-row--gutters">
+                                                            <div class="fr-col-6">
+                                                                {% include "common/display_field_if_exists.html" with value=bailleur.code_postal object_field="bailleur__code_postal__"|add:bailleur_uuid %}
+                                                            </div>
+                                                            <div class="fr-col-6">
+                                                                {% include "common/display_field_if_exists.html" with value=bailleur.ville object_field="bailleur__ville__"|add:bailleur_uuid %}
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    {% include "common/display_field_if_exists.html" with label="SIRET" value=bailleur.siret object_field="bailleur__siret__"|add:bailleur_uuid %}
+                                                    {% include "common/display_field_if_exists.html" with label="Capital social" value=bailleur.capital_social object_field="bailleur__capital_social__"|add:bailleur_uuid %}
+                                                </div>
+                                            </div>
+                                            <div class="fr-col-12 fr-col-lg-6">
+                                                <p class="fr-my-1w"><b>Signataire de la convention</b></p>
+                                                <div class="fr-ml-3w">
+                                                    {% include "common/display_field_if_exists.html" with value=bailleur.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
+                                                    <i>{% include "common/display_field_if_exists.html" with value=bailleur.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}</i>
+                                                    {% include "common/display_field_if_exists.html" with label="Date de délibération" value=bailleur.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
+                                                </div>
+                                            </div>
+                                        </div>
                                     {% endwith %}
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
                     <div class="fr-col-12 fr-col-lg-6">
                         <div class="fr-card fr-card--no-arrow">
                             <div class="fr-card__body">
