--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -11,7 +11,7 @@
                             <b>Convention de type I & II</b></p>
                     {% endif %}
                     <div>
-                        <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" id="validation_form">
+                        <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" id="validation_form" data-turbo="false">
                             {% csrf_token %}
                             <p class="fr-h4">Associer un numéro de convention</p>
 
