--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -1,7 +1,7 @@
-<div class='background-contrast-grey950'>
-    <div class="fr-container">
-        {% if convention %}
-            <div class="fr-col-12 fr-pt-5w fr-pb-5w">
+{% if convention %}
+    <div class='background-contrast-grey950'>
+        <div class="fr-container">
+            <div class="fr-col-12 fr-pt-3w fr-pb-2w">
                 <div class="fr-highlight">
                     <h1>{{convention.programme.nom}}</h1>
                 </div>
@@ -15,6 +15,12 @@
                         </span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class='background-contrast-grey950'>
+        <div class="fr-container">
+            <div class="fr-col-12 fr-pb-3w">
                 {% if request.session.is_instructeur %}
                     <div class="fr-grid-row fr-grid-row--gutters fr-pl-9w">
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-text--bold">
@@ -47,6 +53,6 @@
                     </div>
                 </div>
             </div>
-        {% endif %}
+        </div>
     </div>
-</div>
+{% endif %}
