--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -18,7 +18,9 @@
     {% with programme_uuid=programme.uuid|slugify convention_uuid=convention.uuid|slugify lot_uuid=lot.uuid|slugify %}
         <div class="fr-container-fluid ds_banner">
             {% include "conventions/common/form_header.html" with convention=convention %}
-            {% include "common/step_progressbar.html" with convention=convention %}
+            {% if not convention.is_validated %}
+                {% include "common/step_progressbar.html" with convention=convention %}
+            {% endif %}
             <div class="fr-container">
                 {% csrf_token %}
                 {% if convention.is_project %}
@@ -37,7 +39,7 @@
                     {% include "comments/opened_comments.html" %}
                 </turbo-frame>
 
-                <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-grid-row fr-grid-row--gutters fr-mt-1w">
                     {% if False %}
                         <div class="fr-col-12 fr-col-lg-6">
                             <div class="fr-card fr-card--no-arrow">
@@ -63,9 +65,11 @@
                                                 Bailleur
                                             </h4>
                                         </div>
-                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                        </a>
+                                        {% if not convention.is_validated %}
+                                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                            </a>
+                                        {% endif %}
                                     </div>
                                     <div class="table--limited-height">
                                         {% with bailleur_uuid=bailleur.uuid|slugify %}
@@ -93,9 +97,11 @@
                                                 Bailleur
                                             </h4>
                                         </div>
-                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                        </a>
+                                        {% if not convention.is_validated %}
+                                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                            </a>
+                                        {% endif %}
                                     </div>
                                     {% with bailleur_uuid=bailleur.uuid|slugify %}
                                         <div class="fr-grid-row fr-grid-row--gutters">
@@ -142,9 +148,11 @@
                                             Opération
                                         </h4>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:programme' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    {% if not convention.is_validated %}
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:programme' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 <div class="table--limited-height">
                                     <b>{% include "common/display_field_if_exists.html" with label="Numéro de décision" value=programme.numero_galion %}</b>
@@ -172,9 +180,11 @@
                                             Opération - informations cadastrales
                                         </h4>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    {% if not convention.is_validated %}
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 <div class="table--limited-height">
                                     {% include "common/display_field_if_exists.html" with label="Numéro de permis construire" value=programme.permis_construire object_field="programme__permis_construire__"|add:programme_uuid %}
@@ -205,9 +215,11 @@
                                             Références cadastrales et effet relatif
                                         </h4>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}#id_reference_cadastrale_div" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    {% if not convention.is_validated %}
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}#id_reference_cadastrale_div" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 {% include "common/display_text_and_files_if_exists.html" with text=programme.reference_cadastrale_text file_list=programme.reference_cadastrale_files.values %}
                                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
@@ -267,9 +279,11 @@
                                             Opération - EDD
                                         </h4>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:edd' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    {% if not convention.is_validated %}
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:edd' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 <div class="table--limited-height">
                                     {% include "common/display_text_and_files_if_exists.html" with label="EDD volumétrique" text=lot.edd_volumetrique_text file_list=lot.edd_volumetrique_files.values object_field="lot__edd_volumetrique__"|add:lot_uuid %}
@@ -331,9 +345,11 @@
                                             Financements
                                         </h4>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:financement' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    {% if not convention.is_validated %}
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:financement' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 <p class="fr-my-1w">Prêts & Subventions : </p>
                                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
@@ -403,9 +419,11 @@
                                             Logements
                                         </h4>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:logements' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    {% if not convention.is_validated %}
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:logements' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
                                     <table>
@@ -507,9 +525,11 @@
                                             Annexes
                                         </h4>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    {% if not convention.is_validated %}
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
                                     <table>
@@ -598,9 +618,11 @@
                                             Stationnements
                                         </h4>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    {% if not convention.is_validated %}
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
                                     <table>
@@ -655,9 +677,11 @@
                                             Informations à l'attention du service instructeur
                                         </h4>
                                     </div>
-                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:comments' convention_uuid=convention.uuid %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                    </a>
+                                    {% if not convention.is_validated %}
+                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:comments' convention_uuid=convention.uuid %}" >
+                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 <div class="table--limited-height">
                                     {% include "common/display_text_and_files_if_exists.html" with text=convention.comments_text file_list=convention.comments_files.values %}
@@ -670,11 +694,14 @@
                 <turbo-frame id="convention_type1and2_options_block" data-turbo="true">
                     {% include "conventions/type1and2_options.html" %}
 
-                    {% if request.session.is_instructeur and convention.is_instructeur_editable %}
-                        <div class="fr-grid-row fr-grid-row--gutters fr-my-5w">
+                    <div class="fr-grid-row fr-grid-row--gutters fr-my-5w">
+                        {% if request.session.is_instructeur and convention.is_instruction_ongoing %}
                             {% include "conventions/actions/generate_convention.html" %}
-                        </div>
-                    {% endif %}
+                        {% endif %}
+                        {% if request.session.is_instructeur and convention.is_a_signer %}
+                            {% include "conventions/actions/back_to_instruction.html" %}
+                        {% endif %}
+                    </div>
                     {% if request.session.is_bailleur and convention.is_project %}
                         <div class="fr-grid-row fr-grid-row--gutters fr-my-5w">
                             {% include "conventions/actions/delete.html" with convention=convention %}
@@ -700,9 +727,6 @@
                                 {% else %}
                                     {% include "common/button/return_convention_index.html" %}
                                 {% endif %}
-                            {% endif %}
-                            {% if request.session.is_instructeur and not convention.is_instructeur_editable %}
-                                {% include "common/button/return_convention_index.html" %}
                             {% endif %}
                         </div>
                     </div>
